Fixing broken style and register action + logout button style

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -6,27 +6,17 @@
   font-family: sans-serif;
 }
 
-.todolists {
-  &_container {
-    @media (min-width: 576px) {
-      display: grid;
-      column-gap: 1rem;
-      grid-template-columns: repeat(2, 1fr);
-    }
-    @media (min-width: 768px) {
-      grid-template-columns: repeat(3, 1fr);
-    }
-    @media (min-width: 1200px) {
-      grid-template-columns: repeat(4, 1fr);
-    }
-  }
-}
-
-.todolist__container {
+.button {
+  padding: 6px 14px;
   background-color: white;
-  margin-bottom: 1rem;
-  padding: 1rem;
   border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  width: 100%;
+  border: none;
+  box-shadow: 0px 0.5px 2px 1px rgba(0, 0, 0, 0.1);
+  touch-action: manipulation;
+  cursor: pointer;
+  &:focus {
+    box-shadow: inset -2px -2px 5px rgba(0, 0, 0, 0.1),
+      inset 2px 2px 5px rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.055);
+  }
 }
