--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -48,19 +48,6 @@
     }
     &-button {
       margin-top: 1rem;
-      padding: 6px 14px;
-      background-color: white;
-      border-radius: 8px;
-      border: none;
-      box-shadow: 0px 0.5px 2px 1px rgba(0, 0, 0, 0.1);
-      touch-action: manipulation;
-      cursor: pointer;
-      &:focus {
-        box-shadow: inset -2px -2px 5px rgba(0, 0, 0, 0.1),
-          inset 2px 2px 5px rgba(0, 0, 0, 0.1);
-        background-color: rgba(0, 0, 0, 0.055);
-      }
     }
   }
 }
-
